# test_task_2025_03_31

./: .env.example  .gitignore  Dockerfile  db.sqlite3  docker-compose.yml  main.py  pyproject.toml  readme.md  requirements.txt
app/: __init__.py  config.py  content.py  models.py  redis_client.py
app/auth/: auth.py  db.py  db_helper.py  en_de_cryption.py  utils_jwt.py
